# rhesis

./: .gitignore  .qmlls.ini  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  io.github.dimkar3000.rhesis.desktop  io.github.dimkar3000.rhesis.json  io.github.dimkar3000.rhesis.metainfo.xml  requirements.txt
.github/workflows/: build-appimage.yml  build-flatpak.yml  build.yml  docker-build.yml
scripts/: build-appimage.sh  build-common.sh  build-flatpak.sh  common.sh  create-jre.sh  download-appimage-tools.sh  release-body.py  setup.sh
src/: main.rs
src/interop/: async_messaging_helper.rs  bridge.rs  custom_highlighter.rs  mod.rs  recommendation.rs
src/interop/cpp/: helper.h
src/interop/qml/: MainPage.qml  Root.qml  SettingsPage.qml
src/interop/qml/components/: RuleListItem.qml
src/languagetool/: client.rs  models.rs  service.rs
translations/: rhesis_el_GR.ts  rhesis_en_US.ts
