[package]
name = "rhesis"
version = "0.2.0"
authors = [ "dimkar <dimkar3000@gmail.com>" ]
edition = "2021"
license = "MIT"

[dependencies]
cxx = "1.0.176"
cxx-qt = "0.9.1"
cxx-qt-lib = { version = "0.9.1", features = ["qt_full"] }
cxx-qt-lib-extras = { version = "0.9.1" }

env_logger = "0.11.11"
lazy_static = "1.5.0"
log = "0.4.33"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["serde_derive"] }

tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = "none"
debug = true

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.9.0", features = [ "link_qt_object_files" ] }
glob = "0.3.3"
